force-app/main/default/objects/Contrato_de_compra__c/Contrato_de_compra__c.object-meta.xml
<CustomObject>
    <label>Contrato de Compra</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nº de Contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratos de Compra</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>