force-app/main/default/objects/Contrato_de_compra__c/fields/Administrador_do_contratado__c.field-meta.xml
<CustomField>
    <fullName>Administrador_do_contratado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrador do contratado</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Compra (Administrador do contratado)</relationshipLabel>
    <relationshipName>Adm_contratado</relationshipName>
    <type>Lookup</type>
</CustomField>