force-app/main/default/objects/Contrato_de_compra__c/fields/Assinante__c.field-meta.xml
<CustomField>
    <fullName>Assinante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assinante</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contratos_de_compra</relationshipName>
    <type>Lookup</type>
</CustomField>