force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_I__c.field-meta.xml
<CustomField>
    <fullName>Clausula_I__c</fullName>
    <label>Cláusula I</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>