force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_II__c.field-meta.xml
<CustomField>
    <fullName>Clausula_II__c</fullName>
    <label>Cláusula II</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>