force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_IV__c.field-meta.xml
<CustomField>
    <fullName>Clausula_IV__c</fullName>
    <label>Cláusula IV</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>