force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_IV_Editada__c.field-meta.xml
<CustomField>
    <fullName>Clausula_IV_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cláusula IV Editada</label>
    <type>Checkbox</type>
</CustomField>