force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_IX__c.field-meta.xml
<CustomField>
    <fullName>Clausula_IX__c</fullName>
    <label>Cláusula IX</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>