force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_VI__c.field-meta.xml
<CustomField>
    <fullName>Clausula_VI__c</fullName>
    <label>Cláusula VI</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>