force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_VI_Editada__c.field-meta.xml
<CustomField>
    <fullName>Clausula_VI_Editada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cláusula VI Editada</label>
    <type>Checkbox</type>
</CustomField>