force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_VII__c.field-meta.xml
<CustomField>
    <fullName>Clausula_VII__c</fullName>
    <label>Cláusula VII</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>