force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_VIII__c.field-meta.xml
<CustomField>
    <fullName>Clausula_VIII__c</fullName>
    <label>Cláusula VIII</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>