force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_XI__c.field-meta.xml
<CustomField>
    <fullName>Clausula_XI__c</fullName>
    <label>Cláusula XI</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>