force-app/main/default/objects/Contrato_de_compra__c/fields/Clausula_XII__c.field-meta.xml
<CustomField>
    <fullName>Clausula_XII__c</fullName>
    <label>Cláusula XII</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>