force-app/main/default/objects/Contrato_de_compra__c/fields/Colaborador_vinculado__c.field-meta.xml
<CustomField>
    <fullName>Colaborador_vinculado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador vinculado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contratos_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>