force-app/main/default/objects/Contrato_de_compra__c/fields/Comprador__c.field-meta.xml
<CustomField>
    <fullName>Comprador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comprador</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contratos_de_compra1</relationshipName>
    <type>Lookup</type>
</CustomField>