force-app/main/default/objects/Contrato_de_compra__c/fields/Confidencial__c.field-meta.xml
<CustomField>
    <fullName>Confidencial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidencial</label>
    <type>Checkbox</type>
</CustomField>