force-app/main/default/objects/Contrato_de_compra__c/fields/Contratado_a__c.field-meta.xml
<CustomField>
    <fullName>Contratado_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contratado(a)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos de Compra (Contratado(a))</relationshipLabel>
    <relationshipName>Contratos_de_Compra3</relationshipName>
    <type>Lookup</type>
</CustomField>