force-app/main/default/objects/Contrato_de_compra__c/fields/Data_do_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Data_do_pagamento__c</fullName>
    <label>Data do pagamento</label>
    <type>Date</type>
</CustomField>