force-app/main/default/objects/Contrato_de_compra__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <formula>Contratante__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado Contratante</label>
    <type>Text</type>
</CustomField>