force-app/main/default/objects/Contrato_de_compra__c/fields/Final_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Final_do_contrato__c</fullName>
    <label>Término do contrato</label>
    <type>Date</type>
</CustomField>