force-app/main/default/objects/Contrato_de_compra__c/fields/hoje__c.field-meta.xml
<CustomField>
    <fullName>hoje__c</fullName>
    <formula>IF(DAY(TODAY()) &gt; 9,
TEXT(DAY(TODAY())),
&apos;0&apos; + TEXT(DAY(TODAY())))
+ &apos;/&apos; +
IF(MONTH(TODAY()) &gt; 9,
TEXT(MONTH(TODAY())),
&apos;0&apos; + TEXT(MONTH(TODAY())))
+&apos;/&apos;+
TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>hoje</label>
    <type>Text</type>
</CustomField>