force-app/main/default/objects/Contrato_de_compra__c/fields/idDocAutentique__c.field-meta.xml
<CustomField>
    <fullName>idDocAutentique__c</fullName>
    <label>ID do Documento na ClickSign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>