force-app/main/default/objects/Contrato_de_compra__c/fields/Nesta_fase_desde__c.field-meta.xml
<CustomField>
    <fullName>Nesta_fase_desde__c</fullName>
    <label>Nesta fase desde</label>
    <type>DateTime</type>
</CustomField>