force-app/main/default/objects/Contrato_de_compra__c/fields/Nome_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_contrato__c</fullName>
    <label>Nome do contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>