force-app/main/default/objects/Contrato_de_compra__c/fields/Objeto_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Objeto_do_contrato__c</fullName>
    <label>Objeto do contrato</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>