force-app/main/default/objects/Contrato_de_compra__c/fields/Pagamento_antecipado__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_antecipado__c</fullName>
    <label>Pagamento antecipado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>