force-app/main/default/objects/Contrato_de_compra__c/fields/Percentual_de_locacao__c.field-meta.xml
<CustomField>
    <fullName>Percentual_de_locacao__c</fullName>
    <label>Percentual de locação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>