force-app/main/default/objects/Contrato_de_compra__c/fields/Percentual_de_vendas__c.field-meta.xml
<CustomField>
    <fullName>Percentual_de_vendas__c</fullName>
    <label>Percentual de vendas</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>