force-app/main/default/objects/Contrato_de_compra__c/fields/Quantidade_de_aditivos__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_aditivos__c</fullName>
    <label>Quantidade de aditivos</label>
    <summaryForeignKey>Aditivo_do_Contrato_de_Compra__c.Contrato_de_Compra__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>