force-app/main/default/objects/Contrato_de_compra__c/fields/Remuneracao_fixa__c.field-meta.xml
<CustomField>
    <fullName>Remuneracao_fixa__c</fullName>
    <label>Remuneração fixa</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>