force-app/main/default/objects/Contrato_de_compra__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <formula>Valor_Global__c - Total_de_notas_fiscais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>