force-app/main/default/objects/Contrato_de_compra__c/fields/Situacao_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Situacao_do_contrato__c</fullName>
    <formula>IF(
    ISNULL(Final_do_contrato__c), 
    &quot;PRAZO INDETERMINADO&quot;,
    IF(
        Final_do_contrato__c &lt; TODAY(), 
        &quot;VENCIDO&quot;,
        IF(
            Final_do_contrato__c &lt;= TODAY() + 30, 
            &quot;A VENCER EM 30 DIAS&quot;,
            IF(
                Final_do_contrato__c &lt;= TODAY() + 60, 
                &quot;A VENCER EM 60 DIAS&quot;,
                IF(
                    ISNULL(Inicio_do_contrato__c), 
                    &quot;ERRO&quot;,
                    &quot;VIGENTE&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Situação do contrato</label>
    <type>Text</type>
</CustomField>