force-app/main/default/objects/Contrato_de_compra__c/fields/Termino_dos_aditivos__c.field-meta.xml
<CustomField>
    <fullName>Termino_dos_aditivos__c</fullName>
    <label>Término dos aditivos</label>
    <summarizedField>Aditivo_do_Contrato_de_Compra__c.Novo_termino_do_contrato__c</summarizedField>
    <summaryForeignKey>Aditivo_do_Contrato_de_Compra__c.Contrato_de_Compra__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>