force-app/main/default/objects/Contrato_de_compra__c/fields/Testemunha__c.field-meta.xml
<CustomField>
    <fullName>Testemunha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Testemunha da contratada</inlineHelpText>
    <label>Testemunha</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contratos_de_compra1</relationshipName>
    <type>Lookup</type>
</CustomField>