force-app/main/default/objects/Contrato_de_compra__c/fields/Tipo_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_contrato__c</fullName>
    <label>Tipo de contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compra e Venda</fullName>
            </value>
            <value>
                <fullName>Prestação de Serviços</fullName>
            </value>
            <value>
                <fullName>Locação de Imóvel</fullName>
            </value>
            <value>
                <fullName>Patrocínio</fullName>
            </value>
            <value>
                <fullName>Representação Comercial</fullName>
            </value>
            <value>
                <fullName>Contrato de Distribuição</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>