force-app/main/default/objects/Contrato_de_compra__c/fields/Tipo_de_dura_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_dura_o__c</fullName>
    <label>Tipo de duração</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_contrato__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contínuo</fullName>
            </value>
            <value>
                <fullName>Pontual</fullName>
            </value>
            <value>
                <fullName>Indeterminado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>