force-app/main/default/objects/Contrato_de_compra__c/fields/Valor_do_contrato__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_contrato__c</fullName>
    <label>Valor mensal do contrato</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>