force-app/main/default/objects/Contrato_de_compra__c/recordTypes/Representacao_Comercial.recordType-meta.xml
<RecordType>
    <fullName>Representacao_Comercial</fullName>
    <active>true</active>
    <label>Contratação interna</label>
</RecordType>