force-app/main/default/objects/Contrato_de_compra__c/validationRules/Alteracoes_indevidas.validationRule-meta.xml
<ValidationRule>
    <fullName>Alteracoes_indevidas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Aprovado__c = true,
ISCHANGED( Tipo_de_contrato__c ),
ISCHANGED( Pagamento_antecipado__c ),
ISCHANGED( Prazo_de_entrega__c ),
ISCHANGED( Tipo_de_dura_o__c ),
ISCHANGED( Objeto_do_contrato__c )
)</errorConditionFormula>
    <errorMessage>Alterações indevidas para um contrato já aprovado.</errorMessage>
</ValidationRule>