force-app/main/default/objects/Contrato_de_compra__c/validationRules/Datas.validationRule-meta.xml
<ValidationRule>
    <fullName>Datas</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Aprovado__c = true,
OR(
ISCHANGED(Inicio_do_contrato__c),
ISCHANGED(Final_do_contrato__c)
)
)</errorConditionFormula>
    <errorMessage>Datas do contrato só podem ser alteradas através de aditivo.</errorMessage>
</ValidationRule>