force-app/main/default/objects/Contrato_de_compra__c/validationRules/Endereco_comprador.validationRule-meta.xml
<ValidationRule>
    <fullName>Endereco_comprador</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Padrão&apos;,
OR(
ISBLANK(Comprador__r.BillingStreet), ISBLANK(Comprador__r.BillingCity), ISBLANK(Comprador__r.BillingState), ISBLANK(Comprador__r.BillingPostalCode)
)
)</errorConditionFormula>
    <errorDisplayField>Comprador__c</errorDisplayField>
    <errorMessage>Preencha corretamente o endereço do comprador.</errorMessage>
</ValidationRule>