force-app/main/default/objects/Contrato_de_compra__c/validationRules/Endereco_fornecedor.validationRule-meta.xml
<ValidationRule>
    <fullName>Endereco_fornecedor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name == &apos;Padrão&apos;,
Fornecedor__r.BillingCountry == &apos;Brasil&apos;,
OR(
ISBLANK(Fornecedor__r.BillingStreet), ISBLANK(Fornecedor__r.BillingCity), ISBLANK(Fornecedor__r.BillingState), ISBLANK(Fornecedor__r.BillingPostalCode)
)
)</errorConditionFormula>
    <errorDisplayField>Fornecedor__c</errorDisplayField>
    <errorMessage>Preencha corretamente o endereço do fornecedor.</errorMessage>
</ValidationRule>