force-app/main/default/objects/Contrato_de_compra__c/validationRules/Termino_do_contrato.validationRule-meta.xml
<ValidationRule>
    <fullName>Termino_do_contrato</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 TEXT(Tipo_de_dura_o__c) != &apos;Indeterminado&apos;,
ISBLANK( Final_do_contrato__c )
)</errorConditionFormula>
    <errorDisplayField>Final_do_contrato__c</errorDisplayField>
    <errorMessage>Preencha a data de término</errorMessage>
</ValidationRule>