force-app/main/default/objects/Contrato_de_compra__c/validationRules/Valor_do_contrato.validationRule-meta.xml
<ValidationRule>
    <fullName>Valor_do_contrato</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Aprovado__c = true,
ISCHANGED(Valor_do_contrato__c)
)</errorConditionFormula>
    <errorDisplayField>Valor_do_contrato__c</errorDisplayField>
    <errorMessage>Contrato já aprovado só altera valor a partir de aditivo aprovado.</errorMessage>
</ValidationRule>