force-app/main/default/objects/Contrato_de_compra__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_contrato__c</columns>
    <columns>Inicio_do_contrato__c</columns>
    <columns>Final_do_contrato__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo_de_contrato__c</columns>
    <columns>StatusAssinatura__c</columns>
    <columns>Nesta_fase_desde__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </filters>
    <label>Todos os contratos</label>
</ListView>