force-app/main/default/objects/Contrato_de_compra__c/listViews/C_pia_de_Todos_os_contratos_IZU.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Todos_os_contratos_IZU</fullName>
    <columns>NAME</columns>
    <columns>Comprador__c</columns>
    <columns>Nome_do_contrato__c</columns>
    <columns>Inicio_do_contrato__c</columns>
    <columns>Final_do_contrato__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo_de_contrato__c</columns>
    <columns>StatusAssinatura__c</columns>
    <columns>Nesta_fase_desde__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contrato_de_compra__c.Padrao</value>
    </filters>
    <filters>
        <field>Comprador__c</field>
        <operation>contains</operation>
        <value>IZU</value>
    </filters>
    <label>Cópia de Todos os contratos -  IZU</label>
</ListView>