force-app/main/default/objects/Contrato_de_compra__c/listViews/Contratos_cancelados.listView-meta.xml
<ListView>
    <fullName>Contratos_cancelados</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_contrato__c</columns>
    <columns>Tipo_de_contrato__c</columns>
    <columns>Fornecedor__c</columns>
    <columns>Nesta_fase_desde__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelado</value>
    </filters>
    <label>Contratos cancelados</label>
</ListView>