force-app/main/default/objects/Contrato_de_compra__c/listViews/Contratos_finalizados.listView-meta.xml
<ListView>
    <fullName>Contratos_finalizados</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_contrato__c</columns>
    <columns>Fornecedor__c</columns>
    <columns>Status__c</columns>
    <columns>StatusAssinatura__c</columns>
    <columns>Nesta_fase_desde__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StatusAssinatura__c</field>
        <operation>equals</operation>
    </filters>
    <label>Contratos assinados</label>
</ListView>