force-app/main/default/objects/Contrato_de_compra__c/listViews/Contratos_jur_dicos.listView-meta.xml
<ListView>
    <fullName>Contratos_jur_dicos</fullName>
    <columns>NAME</columns>
    <columns>Contratado_a__c</columns>
    <columns>Nome_do_contrato__c</columns>
    <columns>Inicio_do_contrato__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo_de_contrato__c</columns>
    <columns>StatusAssinatura__c</columns>
    <columns>Nesta_fase_desde__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </filters>
    <filters>
        <field>Tipo_de_contrato__c</field>
        <operation>equals</operation>
        <value>Prestação de Serviços,Locação de Imóvel,Patrocínio,Representação Comercial</value>
    </filters>
    <label>Contratos jurídicos</label>
</ListView>