force-app/main/default/objects/Contrato_de_compra__c/listViews/Meu_contrato.listView-meta.xml
<ListView>
    <fullName>Meu_contrato</fullName>
    <columns>NAME</columns>
    <columns>Nome_do_contrato__c</columns>
    <columns>Inicio_do_contrato__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelado</value>
    </filters>
    <label>Meu contrato</label>
</ListView>